Finished Login Page, made the text dissapear after a fixed screensize to avoid overlapping and made links work to open the Browser

--- a/scr/renderer/mainWindow/tabs/login/loginStyle.css
+++ b/scr/renderer/mainWindow/tabs/login/loginStyle.css
@@ -40,6 +40,16 @@ h2 {
   color: var(--text-color);
 }
 
+a {
+  color: var(--text-color);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 h1 {
   font-size: 2.5rem;
 }
@@ -52,20 +62,6 @@ p {
   position: relative;
   height: 100vh;
   width: 100%;
-}
-
-.container {
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 45%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-right: 2vw;
-  background-color: var(--bg-color);
-  overflow-y: auto;
 }
 
 .logo {
@@ -128,10 +124,10 @@ p {
   position: absolute;
   top: 15px;
   left: 13px;
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.input-box input:focus + label{
+.input-box input:focus + label {
   opacity: 1;
   top: -9px;
   color: white;
@@ -157,42 +153,78 @@ button:hover {
   filter: brightness(115%);
   scale: 1.02;
 }
-
-#writer {
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 55%;
-  display: block;
-  align-items: center;
-  align-self: center;
-  padding-left: 2vw;
-  color: var(--text-color);
-  overflow: hidden;
-  font-family: monospace;
-  font-size: 4rem;
-}
-
-#writer-content {
-  white-space: inline;
-}
-
-#writer-cursor {
-  display:  inline-block;
-  vertical-align: text-bottom;
-  white-space: pre;
-  animation: blink 0.85s infinite;
-}
-
-@keyframes blink {
-  0%,
-  50%,
-  100% {
-    opacity: 1;
+@media screen and (min-width: 1465px) {
+  .login-container {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-right: 2vw;
+    background-color: var(--bg-color);
+    overflow-y: auto;
   }
-  25%,
-  75% {
-    opacity: 0;
+
+  #writer {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 55%;
+    display: block;
+    align-items: center;
+    align-self: center;
+    padding-left: 2vw;
+    color: var(--text-color);
+    overflow: hidden;
+    font-family: monospace;
+    font-size: 4rem;
+  }
+
+  #writer-content {
+    white-space: inline;
+  }
+
+  #writer-cursor {
+    display: inline-block;
+    vertical-align: text-bottom;
+    white-space: pre;
+    animation: blink 0.85s infinite;
+  }
+
+  @keyframes blink {
+    0%,
+    50%,
+    100% {
+      opacity: 1;
+    }
+    25%,
+    75% {
+      opacity: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 1464px) {
+  .login-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-right: 2vw;
+    background-color: var(--bg-color);
+    overflow-y: auto;
+  }
+  #writer {
+    display: none;
+  }
+  #writer-content {
+    display: none;
+  }
+  #writer-cursor {
+    display: none;
   }
 }
